PR/51578: Henning Petersen: Fix leak on error.